--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,18 @@
   "compilerOptions": {
     "lib": ["ES2022"],
     "target": "ES2022",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "Node10",
     "module": "ES2022",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "noUncheckedIndexedAccess": true,
     "removeComments": true,
-    "allowJs": true,
     "strict": true,
-    "noEmit": true,
-    "declaration": false
+    "declaration": false,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
   },
   "include": ["src"],
   "exclude": ["dist", "node_modules", ".commandkit"]
