--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@prisma/client": "5.17.0",
     "@types/node": "^20.14.12",
     "commandkit": "^0.1.10",
     "discord.js": "^14.15.3",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/spotify-web-api-node": "^5.0.11",
+    "prisma": "5.17.0",
     "typescript": "^5.5.4",
     "wrangler": "^3.67.1"
   }
