--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,24 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "compilerOptions": {
-    "lib": ["ES2022"],
-    "target": "ES2022",
-    "moduleResolution": "Node10",
-    "module": "ES2022",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "noUncheckedIndexedAccess": true,
-    "removeComments": true,
-    "strict": true,
-    "declaration": false,
-    "forceConsistentCasingInFileNames": true,
-    "paths": {
-      "@/*": ["./src/*"]
+    "$schema": "https://json.schemastore.org/tsconfig",
+    "compilerOptions": {
+        "lib": ["ES2022"],
+        "target": "ES2022",
+        "moduleResolution": "Node10",
+        "module": "ES2022",
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "noUncheckedIndexedAccess": true,
+        "removeComments": true,
+        "strict": true,
+        "declaration": false,
+        "forceConsistentCasingInFileNames": true,
+        "paths": {
+            "@/*": ["./src/*"]
+        },
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
-    "outDir": "./dist",
-    "rootDir": "./src",
-  },
-  "include": ["src"],
-  "exclude": ["dist", "node_modules", ".commandkit"]
+    "include": ["src"],
+    "exclude": ["dist", "node_modules", ".commandkit"]
 }
